crates/ika/src/client_ptb/snapshots/ika__client_ptb__lexer__tests__gas.snap
---
source: crates/ika/src/client_ptb/lexer.rs
expression: lex(gas)
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 3,
        },
        value: Lexeme(
            Ident,
            "gas",
        ),
    },
    Spanned {
        span: Span {
            start: 3,
            end: 3,
        },
        value: Lexeme(
            Eof,
            "",
        ),
    },
]
